--- a/local.properties
+++ b/local.properties
@@ -4,10 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Thu May 14 12:38:25 CST 2020
-sdk.dir=/Users/Chia_Huang/Library/Android/sdk
-=======
-#Sat May 16 00:29:37 CST 2020
-sdk.dir=/Users/yu/Library/Android/sdk
->>>>>>> 843196b6840b20d13c0eff4ba0f328b4087211c5
+#Mon May 18 10:18:18 CST 2020
+>>>>>>>=843196b6840b20d13c0eff4ba0f328b4087211c5
+sdk.dir=/Users/pumlu/Library/Android/sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
