--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:persistent="true"
         tools:ignore="GoogleAppIndexingWarning">
         <uses-library
             android:name="org.apache.http.legacy"
@@ -40,7 +41,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB5QhRk7RXlIvshtQzyw3GKtDnNSSuNWqM" />
+            android:value="AIzaSyDNCNKzgpOzZSeZ5zc8TKriCG8GxvAneRU" />
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
@@ -57,6 +58,9 @@
             android:name="com.lu.driver.StarDialogActivity"
             android:launchMode="singleTop"
             android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert" />
+
+        <service android:name = "com.lu.driver.LocationService">
+        </service>
     </application>
 
 </manifest>
